// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toBeFinite fails when given a finite number 1`] = `
"expect(received).not.toBeFinite()

Expected value to not be finite received:
  1"
`;

exports[`.toBeFinite fails when not given Infinity 1`] = `
"expect(received).toBeFinite()

Expected value to be finite received:
  Infinity"
`;

exports[`.toBeFinite fails when not given NaN 1`] = `
"expect(received).toBeFinite()

Expected value to be finite received:
  NaN"
`;
